--- a/src/app/app/homepage/homepage.component.html
+++ b/src/app/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="login">
+<div class="login-user">
     <div class="main">
         <form #userlogin="ngForm" (ngSubmit)="login(userlogin)" class="shadow-lg w-50 h-50 d-flex align-items-center justify-content-center">
             <div class="row-gap-2">
