--- a/src/app/customer/regiters/regiters.component.html
+++ b/src/app/customer/regiters/regiters.component.html
@@ -9,10 +9,10 @@
     
                   </div>
                   <div class="col-10">
-                 Password:  <input type="text" name="password" #password="ngModel" [(ngModel)]="password "  class="form-control" ngModel required><br>
+                 Password:  <input type="text" name="password" #passwords="ngModel" [(ngModel)]="password "  class="form-control" ngModel required><br>
                   </div>
                   <div class="col-10">
-                    Phone Number:  <input type="text" name=" PhoneNumber" #password="ngModel" [(ngModel)]=" phonenumber"  class="form-control" ngModel required><br>
+                    Phone Number:  <input type="text" name=" PhoneNumber" #phone="ngModel" [(ngModel)]="phonenumber"  class="form-control" ngModel required><br>
                      </div>
                      
                      
