--- a/src/app/app/homepage/homepage.component.html
+++ b/src/app/app/homepage/homepage.component.html
@@ -1,5 +1,6 @@
 <div class="login-user">
     <div class="main">
+      
         <form #userlogin="ngForm" (ngSubmit)="login(userlogin)" class="shadow-lg w-50 h-50 d-flex align-items-center justify-content-center">
             <div class="row-gap-2">
                 <h1 class="bi bi-person-circle d-flex align-items-center justify-content-center"></h1>
@@ -13,12 +14,12 @@
                     <input type="password" id="password" name="password" [(ngModel)]="password" class="form-control" required>
                 </div>
                 <br>
-                <div class="col-10">
-                    <button class="btn btn-dark" type="submit">Login</button>
+                <div class="col-13">
+                    <button class="btn btn-dark" type="submit">Login</button>&nbsp; <a routerLink="Register">Click to new user?</a>
                 </div>
                 <br>
                 <div class="col-10">
-                    <a routerLink="Register">Click to new user?</a>
+                  
                 </div>
             </div>
         </form>
