--- a/src/app/customer/regiters/regiters.component.css
+++ b/src/app/customer/regiters/regiters.component.css
@@ -1,3 +1,9 @@
 .err-msg{
     color:red;
 }
+.main {
+    height: 100vh;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+}
