--- a/src/app/app/homepage/homepage.component.css
+++ b/src/app/app/homepage/homepage.component.css
@@ -1,6 +1,6 @@
 
 .login-user {
-    width: 100%; /* Set width as needed, for example, 100% or a specific value like 500px */
+    width: 100%; 
     height: 100vh; 
     background-image: url("https://img.freepik.com/free-photo/shopping-bag-cart_23-2148879372.jpg");
     background-repeat: no-repeat;
