--- a/src/app/app/homepage/homepage.component.html
+++ b/src/app/app/homepage/homepage.component.html
@@ -15,7 +15,7 @@
                 </div>
                 <br>
                 <div class="col-13">
-                    <button class="btn btn-dark" type="submit">Login</button>&nbsp; <a routerLink="Register">Click to new user?</a>
+                    <button class="btn btn-dark" type="submit" (click)="navigateToDashboard()">Login</button>&nbsp; <a routerLink="Register">Click to new user?</a>
                 </div>
                 <br>
                 <div class="col-10">
