--- a/src/app/app/homepage/dashboard/dashboard.component.html
+++ b/src/app/app/homepage/dashboard/dashboard.component.html
@@ -33,11 +33,11 @@
     </div>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link active .bg-primary" aria-current="page" href="#"
             >Home</a
           >
-        </li>
+        </li> -->
 
         <li class="nav-item dropdown">
           <a
@@ -57,51 +57,51 @@
               >
             </li>
             <li>
-              <a class="dropdown-item text-dark" routerLink="Register"
+              <a class="dropdown-item text-dark" (click)="navigateToRegistrationForm()" 
                 >New User</a
               >
             </li>
-            <li><a class="dropdown-item text-dark" href="#">Your Orders</a></li>
+            <li><a class="dropdown-item text-dark" (click)="navigateToOrders()">Your Orders</a></li>
           </ul>
         </li>
       </ul>
     </div>
     <div class="nav">
-      <h4 class="bi bi-cart-fill"></h4>
+      <h4 class="bi bi-cart-fill" (click)="navigateToCart()"></h4>
     </div>
   </div>
 </nav>
 <div class="card w-100 h-100">
   <div class="d-flex align-items-center justify-content-around">
-    <div>
+    <div (click)="viewMobiles()">
       <img
         src="https://rukminim2.flixcart.com/flap/64/64/image/22fddf3c7da4c4f4.png?q=100"
         alt=""
       />
       <h5>Mobiles</h5>
     </div>
-    <div>
+    <div (click)="viewComputer()">
       <img
         src="https://rukminim2.flixcart.com/flap/64/64/image/69c6589653afdb9a.png?q=100"
         alt=""
       />
       <h5>Electroics</h5>
     </div>
-    <div>
+    <div (click)="viewFurniture()">
       <img
         src="https://rukminim2.flixcart.com/flap/64/64/image/ab7e2b022a4587dd.jpg?q=100"
         alt=""
       />
-      <h5>Fashion</h5>
+      <h5>Furniture</h5>
     </div>
-    <div>
+    <div (click)="viewMen()">
       <img
         src="https://rukminim2.flixcart.com/fk-p-flap/64/64/image/0d75b34f7d8fbcb3.png?q=100"
         alt=""
       />
-      <h5>Furniture</h5>
+      <h5>Fashion</h5>
     </div>
-    <div>
+    <div (click)="viewWatches()">
       <img
         width="40px"
         height="50px"
@@ -214,7 +214,7 @@
 
 <h2>Mobiles</h2>
 <div class="product-container">
-  <div class="product-item" *ngFor="let m of mobile">
+  <div class="product-item" *ngFor="let m of mobile" (click)="viewMobiles()">
     <img src="{{ m.image }}" />
   </div>
 </div>
@@ -233,19 +233,19 @@
   </div>
 </div>
 
-<h2>Men</h2>
+<h2>Fashion</h2>
 <div class="product-container">
   <div class="product-item" *ngFor="let m of men" (click)="viewMen()">
     <img src="{{ m.image }}" />
   </div>
 </div>
 
-<h2>Woman</h2>
+<!-- <h2>Woman</h2>
 <div class="product-container">
   <div class="product-item" *ngFor="let w of woman" (click)="viewWoman()">
     <img src="{{ w.image }}" />
   </div>
-</div>
+</div> -->
 
 <h2>Furniture</h2>
 <div class="product-container">
