--- a/src/app/customer/regiters/regiters.component.html
+++ b/src/app/customer/regiters/regiters.component.html
@@ -100,6 +100,7 @@
             class="btn btn-primary"
             type="submit"
             [disabled]="userlogin.invalid"
+            routerLink=""
           >
             Register
           </button>
