--- a/src/app/addtocart/cart/cart.component.html
+++ b/src/app/addtocart/cart/cart.component.html
@@ -1,1 +1,12 @@
-<h1>Currently you do not have any items in the cart</h1>
+<!-- <h1>Currently you do not have any items in the cart</h1>
+add-to-cart.component.html -->
+<div *ngFor="let item of cartItems">
+  <h2>{{ item.product }}</h2>
+  <p><strong>Company:</strong> {{ item.company }}</p>
+  <p><strong>Model:</strong> {{ item.model }}</p>
+  <p><strong>Price:</strong> ${{ item.price }}</p>
+  <p><strong>Category:</strong> {{ item.category }}</p>
+  <p><strong>Description:</strong>{{ item.description }}</p>
+  <button class="btn btn-success">Buy Now</button>
+  <!-- (click)="buyNow()" -->
+</div>
