--- a/src/app/products/fashionwomaninfo/fashionwomaninfo.component.html
+++ b/src/app/products/fashionwomaninfo/fashionwomaninfo.component.html
@@ -47,21 +47,23 @@
     </div>
   </div>
 </nav>
-<div *ngIf="mobileData" class="mobile-detail">
-  <div class="mobile-img">
-    <img [src]="mobileData.image" alt="{{ mobileData.product }}" />
+
+<div *ngIf="fashionWomanData" class="fashion-detail">
+  <div class="fashion-img">
+    <img [src]="fashionWomanData.image" alt="{{ fashionWomanData.product }}" />
   </div>
   <div class="vertical-line"></div>
-  <div class="mobile-info">
-    <h2>{{ mobileData.product }}</h2>
-    <p><strong>Company:</strong> {{ mobileData.company }}</p>
-    <p><strong>Model:</strong> {{ mobileData.model }}</p>
-    <p><strong>Price:</strong> ${{ mobileData.price }}</p>
-    <p><strong>Category:</strong> {{ mobileData.category }}</p>
-    <p><strong>Description:</strong>{{ mobileData.description }}</p>
+  <div class="fashion-info">
+    <h2>{{ fashionWomanData.product }}</h2>
+    <p><strong>Company:</strong> {{ fashionWomanData.type }}</p>
+    <p><strong>Model:</strong> {{ fashionWomanData.model }}</p>
+    <p><strong>Price:</strong> ${{ fashionWomanData.price }}</p>
+    <p><strong>Category:</strong> {{ fashionWomanData.category }}</p>
+    <p><strong>Description:</strong>{{ fashionWomanData.description }}</p>
     <div class="buttons">
       <!-- <button class="btn btn-secondary">Wishlist</button> -->
-      <button class="btn btn-primary" (click)="addtoCart()">Add To Cart</button>
+      <!-- (click)="onAddToCart()" -->
+      <button class="btn btn-primary">Add To Cart</button>
       <button class="btn btn-success" (click)="buyNow()">Buy Now</button>
     </div>
   </div>
