--- a/src/app/products/furnitureinfo/furnitureinfo.component.html
+++ b/src/app/products/furnitureinfo/furnitureinfo.component.html
@@ -63,7 +63,7 @@
     <div class="buttons">
       <!-- <button class="btn btn-secondary">Wishlist</button> -->
       <!-- (click)="onAddToCart()" -->
-      <button class="btn btn-primary">Add To Cart</button>
+      <button class="btn btn-primary">Add To Cart<span><button (click)="inc()">+</button><b>{{counter}}</b><button (click)="dec()">-</button></span></button>
       <button class="btn btn-success" (click)="buyNow()">Buy Now</button>
     </div>
   </div>
