--- a/src/app/app/homepage/dashboard/dashboard.component.html
+++ b/src/app/app/homepage/dashboard/dashboard.component.html
@@ -41,12 +41,13 @@
 
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle"
+            class="nav-link dropdown-toggle .text-dark"
             href="#"
             id="navbarDropdownMenuLink"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
+        
           >
             Login
           </a>
