--- a/src/app/products/mobile-info/mobile-info.component.html
+++ b/src/app/products/mobile-info/mobile-info.component.html
@@ -28,13 +28,13 @@
             >
           </li> -->
       </ul>
-      <form class="d-flex" (submit)="search($event)">
+      <form class="d-flex" >
         <input
           class="form-control me-2"
           type="search"
           placeholder="Search"
           aria-label="Search"
-          [(ngModel)]="searchQuery"
+
           name="search"
         />
         <!-- <button class="btn btn-outline-light" type="submit">Search</button> -->
