--- a/src/app/products/furnitureinfo/furnitureinfo.component.html
+++ b/src/app/products/furnitureinfo/furnitureinfo.component.html
@@ -62,10 +62,11 @@
       <!-- <button class="btn btn-secondary">Wishlist</button> -->
       <!-- (click)="onAddToCart()" -->
       <button class="btn btn-primary">
-        Add To Cart<span
+        Add To Cart
+        <!-- <span
           ><button (click)="inc()">+</button><b>{{ counter }}</b
           ><button (click)="dec()">-</button></span
-        >
+        > -->
       </button>
       <button class="btn btn-success" (click)="buyNow()">Buy Now</button>
     </div>
