--- a/src/app/app/homepage/homepage.component.html
+++ b/src/app/app/homepage/homepage.component.html
@@ -10,7 +10,7 @@
           class="bi bi-person-circle d-flex align-items-center justify-content-center"
         ></h1>
         <div class="col-10">
-          <label for="username">Username:</label>
+          <label for="username">Email:</label>
           <input
             type="email"
             id="username"
@@ -34,13 +34,8 @@
         </div>
         <br />
         <div class="col-13">
-          <button
-            class="btn btn-dark"
-            type="submit"
-            (click)="navigateToDashboard()"
-          >
-            Login</button
-          >&nbsp; <a routerLink="/Register">Click to new user?</a>
+          <button class="btn btn-dark" type="submit">Login</button>&nbsp;
+          <a routerLink="/Register">Click to new user?</a>
         </div>
         <br />
         <div class="col-10"></div>
