--- a/src/app/products/fashioninfo/fashioninfo.component.html
+++ b/src/app/products/fashioninfo/fashioninfo.component.html
@@ -64,10 +64,10 @@
       <button class="btn btn-primary" (click)="addtoCart()">Add To Cart</button>
       <button class="btn btn-primary">
         Add To Cart
-        <span
+        <!-- <span
           ><button (click)="inc()">+</button><b>{{ counter }}</b
           ><button (click)="dec()">-</button></span
-        >
+        > -->
       </button>
       <button class="btn btn-success" (click)="buyNow()">Buy Now</button>
     </div>
